vertically align icons - fixes ipad/iphone alignment issues

--- a/app/components/App.scss
+++ b/app/components/App.scss
@@ -4,6 +4,7 @@
 }
 
 .App__content {
+    margin-top: 3.5rem;
     /* Small only */
     @media screen and (max-width: 39.9375em) {
         margin-top: 1.5rem;
