--- a/app/components/elements/Icon.scss
+++ b/app/components/elements/Icon.scss
@@ -1,10 +1,10 @@
 .Icon {
-  position: relative;
-  top: 2px;
+  vertical-align: middle;
 
   > svg, span.icon {
     width: 1.12rem;
     height: 1.12rem;
+    vertical-align: top;
   }
 
   &.fill-black > svg > path {
