--- a/app/components/elements/Voting.scss
+++ b/app/components/elements/Voting.scss
@@ -19,9 +19,6 @@
 
 .Voting__button-up {
   .Icon {
-    top: 4px;
-  }
-  .Icon {
     margin-left: 0;
   }
   > a {
